unpackaged/main/default/objects/zkfedex__QueuedShipmentDocuments__c/zkfedex__QueuedShipmentDocuments__c.object-meta.xml
<CustomObject>
    <label>FedEx Queued Shipment Documents</label>
    <nameField>
        <label>Queued Shipment Documents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx Queued Shipment Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>