unpackaged/main/default/objects/zkfedex__QueuedShipmentDocuments__c/fields/zkfedex__CommercialInvoiceLetterHead__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CommercialInvoiceLetterHead__c</fullName>
    <label>Commercial Invoice LetterHead</label>
    <length>20</length>
    <type>Text</type>
</CustomField>