unpackaged/main/default/objects/zkfedex__QueuedShipmentDocuments__c/fields/zkfedex__ImporterAccount__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ImporterAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold-To/Importer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FedEx Queued Shipment Documents</relationshipLabel>
    <relationshipName>Queued_Shipment_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>