unpackaged/main/default/objects/zkfedex__QueuedShipmentDocuments__c/fields/zkfedex__ImporterSameAsConsignee__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ImporterSameAsConsignee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sold-To/Importer Same as Consignee</label>
    <type>Checkbox</type>
</CustomField>