unpackaged/main/default/objects/zkfedex__QueuedShipmentDocuments__c/fields/zkfedex__NaftaCoSignature__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NaftaCoSignature__c</fullName>
    <label>NAFTA CO Signature</label>
    <length>20</length>
    <type>Text</type>
</CustomField>