unpackaged/main/default/objects/zkfedex__QueuedShipmentDocuments__c/fields/zkfedex__ProFormaInvoiceLetterHead__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ProFormaInvoiceLetterHead__c</fullName>
    <label>Pro Forma Invoice LetterHead</label>
    <length>20</length>
    <type>Text</type>
</CustomField>